frontend: fix dropdown menu z-index

--- a/src/renderer/src/components/common/DropDown.module.css
+++ b/src/renderer/src/components/common/DropDown.module.css
@@ -9,6 +9,7 @@
 }
 
 .dropdownMenu {
+  z-index: 99999;
   position: absolute;
   top: 100%;
   left: 0;
